kubernetes/cray-hms-rts/templates/destinationrules.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "cray-hms-redfish-translation-layer-sma-kafkarule"
  labels:
    app.kubernetes.io/name: cray-hms-redfish-translation-layer
spec:
  host: "cluster-kafka-bootstrap.sma.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "cray-hms-redfish-translation-layer-sma-collectorrule"
  labels:
    app.kubernetes.io/name: cray-hms-redfish-translation-layer
spec:
  host: "hms-hmcollector.sma.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "cray-hms-rts-service"
  labels:
    app.kubernetes.io/name: cray-hms-rts
spec:
  host: "cray-hms-rts"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
